Even more spacing fixes

--- a/src/pages/Subreddit/CommentsSection/CommentsSection.module.css
+++ b/src/pages/Subreddit/CommentsSection/CommentsSection.module.css
@@ -60,6 +60,7 @@
 .comments-section__filter {
   display: flex;
   align-items: center;
+  margin-top: 16px;
 }
 .comments-section__filter:hover {
   cursor: pointer;
